# orch-agent-cli

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE-AGENT.md  CODEX.md  GEMINI.md  README.md  config.yaml  multi-ai-orchestration-implementation-plan-v2.md  pyproject.toml  pyrightconfig.json
config/: agent_costs.json  agent_reliability.json  agents.json  config.yaml
docs/: improvement-plan-v2.md  multi-ai-orchestration-implementation-plan-v2.md  multi-ai-orchestration-implementation-plan-v3.md  validation-report-v1.md  validation-report-v2.md
docs/agents/: CLAUDE.md
schemas/: agent.schema.json  assignment.schema.json  consensus.schema.json  release_readiness.schema.json  task.schema.json
scripts/: brief_parser.py  consensus.py  cost_tracker.py  dashboard.py  github_client.py  multi_orchestrator.py  new-brief.sh  orchestrator.py  reliability_tracker.py  report_generator.py  run_agent.sh  secret_scan.py  setup_labels.py  start_t1.sh  start_t2.sh  start_t3.sh  start_t4.sh  state_manager.py  validate_schema.py  verify_fixes.py  webhook_server.py
templates/: AGENTS.md  CLAUDE.md  CODEX.md  GEMINI.md  setup.sh
templates/inbox/: BRIEF-EXAMPLE.md
tests/: conftest.py  test_brief_parser.py  test_consensus.py  test_github_client.py  test_integration.py  test_orchestrator.py  test_orchestrator_env.py  test_orchestrator_stability.py  test_report_generator.py  test_smoke.py  test_state_manager.py  test_validate_schema.py
tests/e2e/: test_demo1_2agent.py  test_readme_sync_e2e.py
tests/fixtures/: BRIEF-sample.md
tests/unit/: test_cost_tracker.py  (+11 more)
(+7 files in other folders)
